--- a/src/classes/V4PM_Controller.cls
+++ b/src/classes/V4PM_Controller.cls
@@ -14,27 +14,28 @@ public with sharing class V4PM_Controller {
 				eventInstances.add(new eiInstance(e,idx));
 				idx++;
 			}
-			prototypes = [SELECT Id,Name FROM Campaign WHERE Venue__c = :eventInstances[0].eventInstance.PatronTicket__Venue__c];
 		}
 		
 	}
 
-	public List<SelectOption> getPrototypes() {
-		List<SelectOption> options = new List<SelectOption>();
-		for(Integer i = 0; i < prototypes.size(); i++) {
-			SelectOption option = new SelectOption(prototypes[i].Id,prototypes[i].Name);
-			options.add(option);
-		}
-		return options;
+	public PageReference submit(){
+		return Page.V4PM_Submit;
 	}
 
 	public class eiInstance {
 		public PatronTicket__EventInstance__c eventInstance {get;set;}
 		public Integer idx {get;set;}
-		public Campaign campaign {get;set;}
-		public eiInstance(PatronTicket__EventInstance__c ei,Integer i) {
-			idx = i;
+		public String campaign {get;set;}
+		public List<SelectOption> options {get; set;}
+		public eiInstance(PatronTicket__EventInstance__c ei,Integer j) {
+			idx = j;
 			eventInstance = ei;
+			options = new List<SelectOption>();
+			List<Campaign> prototypes = [SELECT Id,Name FROM Campaign WHERE Venue__c = :eventInstance.PatronTicket__Venue__c];
+			for(Integer i = 0; i < prototypes.size(); i++) {
+				SelectOption option = new SelectOption(prototypes[i].Id,prototypes[i].Name);
+				options.add(option);
+			}
 		}
 	}
 }
