and now we return to the new campaign

--- a/src/classes/V4PM_Controller.cls
+++ b/src/classes/V4PM_Controller.cls
@@ -114,7 +114,7 @@ public with sharing class V4PM_Controller {
 		
 		insert newShifts;
 
-		return Page.V4PM_Submit;
+		return new ApexPages.StandardController(volunteerCampaign).view();
 	}
 
 	public class eiInstance {
