--- a/src/classes/V4PM_VolunteerBuild.cls
+++ b/src/classes/V4PM_VolunteerBuild.cls
@@ -18,10 +18,10 @@ public with sharing class V4PM_VolunteerBuild {
 		List<Id> campaignIds = new List<Id>();
 		List<PatronTicket__EventInstance__c> eventInstances = new List<PatronTicket__EventInstance__c>();
 		List<Boolean> builds = new List<Boolean>();
-		for(Integer i = 0;i < eis.size(); i++) {
-			eventInstances.add(eis[i].eventInstance);
-			campaignIds.add(eis[i].campaign);
-			builds.add(eis[i].build);
+		for(eiInstance e: eis) {
+			eventInstances.add(e.eventInstance);
+			campaignIds.add(e.campaign);
+			builds.add(e.build);
 		}
 		
 		// create a set of the prototype campaigns we actually use
@@ -30,25 +30,25 @@ public with sharing class V4PM_VolunteerBuild {
 		Map<Id,List<GW_Volunteers__Volunteer_Job__c>> jobMap = new Map<Id,List<GW_Volunteers__Volunteer_Job__c>>();
 		Map<Id,GW_Volunteers__Volunteer_Job__c> prototypeIdToJob = new Map<Id,GW_Volunteers__Volunteer_Job__c>();
 		// iterate through that set, and create the jobs we are using
-		for(Integer i=0; i < campaigns.size(); i++) {
+		for(Campaign c:campaigns) {
 			List<GW_Volunteers__Volunteer_Job__c> jobs = [SELECT Id,Name,
 																Volunteer_sees_show__c,GW_Volunteers__Inactive__c,
 																GW_Volunteers__Display_on_Website__c,
 																GW_Volunteers__Description__c,
 																GW_Volunteers__Campaign__c 
 																FROM GW_Volunteers__Volunteer_Job__c 
-																WHERE GW_Volunteers__Campaign__c =:campaigns[i].Id];
-			jobMap.put(campaigns[i].Id,jobs);
-			for(Integer j=0; j < jobs.size();j++){
+																WHERE GW_Volunteers__Campaign__c =:c.Id];
+			jobMap.put(c.Id,jobs);
+			for(GW_Volunteers__Volunteer_Job__c job:jobs){
 				GW_Volunteers__Volunteer_Job__c currentJob = new GW_Volunteers__Volunteer_Job__c(
-								Name=jobs[j].Name+' '+campaigns[i].Name,
+								Name=job.Name+' '+c.Name,
 								Event_Volunteer_Notes__c = ticketableEvent.Volunteer_Notes__c,
-								Volunteer_sees_show__c = jobs[j].Volunteer_sees_show__c,
-								GW_Volunteers__Inactive__c = jobs[j].GW_Volunteers__Inactive__c,
-								GW_Volunteers__Display_on_Website__c = jobs[j].GW_Volunteers__Display_on_Website__c,
-								GW_Volunteers__Description__c = jobs[j].GW_Volunteers__Description__c,
+								Volunteer_sees_show__c = job.Volunteer_sees_show__c,
+								GW_Volunteers__Inactive__c = job.GW_Volunteers__Inactive__c,
+								GW_Volunteers__Display_on_Website__c = job.GW_Volunteers__Display_on_Website__c,
+								GW_Volunteers__Description__c = job.GW_Volunteers__Description__c,
 								GW_Volunteers__Campaign__c = volunteerCampaign.Id);
-				prototypeIdToJob.put(jobs[j].Id,currentJob);
+				prototypeIdToJob.put(job.Id,currentJob);
 				newJobs.add(currentJob);
 			}
 		}
@@ -67,8 +67,7 @@ public with sharing class V4PM_VolunteerBuild {
 		for(Integer i=0; i < eventInstances.size(); i++) {
 			if (builds[i]){
 				Id campaignId = campaignIds[i];
-				for(Integer j=0; j < prototypeShifts.size();j++){
-					GW_Volunteers__Volunteer_Shift__c proto = prototypeShifts[j];
+				for(GW_Volunteers__Volunteer_Shift__c proto: prototypeShifts){
 					Long timeDiff = proto.GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Campaign__r.Event_Start_Time__c.getTime() - proto.GW_Volunteers__Start_Date_Time__c.getTime();
 					Time newTime = eventInstances[i].PatronTicket__InstanceDate__c.time().addMilliseconds(-timeDiff.intValue());
 					DateTime newDateTime = DateTime.newInstance(eventInstances[i].PatronTicket__InstanceDate__c.date(),newTime);
