a very basic test, but coverage begins.

--- a/src/classes/V4PM_VolunteerBuild_TEST.cls
+++ b/src/classes/V4PM_VolunteerBuild_TEST.cls
@@ -117,4 +117,32 @@ private class V4PM_VolunteerBuild_TEST
 		insert shift3;
 	}
 
+	@isTest static void testBigPicture() {
+		PatronTicket__TicketableEvent__c ticketableEvent = [SELECT Id,Name,PatronTicket__Active__c,Volunteer_Campaign__c,
+							   Volunteer_Notes__c,PatronTicket__Description__c,PatronTicket__Detail__c,
+							   Duration_hours__c FROM PatronTicket__TicketableEvent__c 
+							   WHERE Name = 'Party Hardy' LIMIT 1];
+		List<eiInstance> eis = new List<eiInstance>();
+		for (PatronTicket__EventInstance__c e: [SELECT Id,Name,PatronTicket__InstanceDate__c,
+												PatronTicket__Active__c,PatronTicket__Detail__c,
+												PatronTicket__SeatingType__c,PatronTicket__TicketableEvent__c,
+												PatronTicket__Venue__c 
+												FROM PatronTicket__EventInstance__c 
+												WHERE PatronTicket__TicketableEvent__c = :ticketableEvent.Id]) {
+			eis.add(new eiInstance(e));
+		}
+		Id prototype = [SELECT Id,Name 
+						FROM Campaign 
+						WHERE name = 'Volunteers GA' LIMIT 1].Id;
+		for(eiInstance ei:eis) {ei.campaign=prototype;ei.build=true;}
+		Campaign volunteerCampaign = V4PM_VolunteerBuild.build(ticketableEvent,eis);
+
+		volunteerCampaign = [SELECT Id,Name,GW_Volunteers__Volunteer_Jobs__c,GW_Volunteers__Volunteer_Shifts__c
+							 FROM Campaign
+							 WHERE Id = :volunteerCampaign.Id];
+
+		System.assertEquals(ticketableEvent.Name+' Volunteers', volunteerCampaign.Name);
+		System.assertEquals(1,volunteerCampaign.GW_Volunteers__Volunteer_Jobs__c);
+		System.assertEquals(4,volunteerCampaign.GW_Volunteers__Volunteer_Shifts__c);
+	}
 }
