close #13, removed eiInstance

--- a/src/classes/V4PM_Controller.cls
+++ b/src/classes/V4PM_Controller.cls
@@ -23,8 +23,33 @@ public with sharing class V4PM_Controller {
 	}
 
 	public PageReference submit(){
-		Campaign volunteerCampaign = V4PM_VolunteerBuild.build(ticketableEvent,eis);
+		Map<PatronTicket__EventInstance__c,Id> eiMap = new Map<PatronTicket__EventInstance__c,Id>();
+		for(eiInstance e: eis) {
+			if (e.build) {
+				eiMap.put(e.eventInstance, (Id)e.campaign);
+			}
+		}
+
+		Campaign volunteerCampaign = V4PM_VolunteerBuild.build(ticketableEvent,eiMap);
 
 		return new ApexPages.StandardController(volunteerCampaign).view();
+	}
+
+	public class eiInstance {
+		public PatronTicket__EventInstance__c eventInstance {get;set;}
+		public String campaign {get;set;}
+		public Boolean build {get;set;}
+		public List<SelectOption> options {get; set;}
+		public eiInstance(PatronTicket__EventInstance__c ei) {
+			eventInstance = ei;
+			options = new List<SelectOption>();
+			List<Campaign> prototypes = [SELECT Id,Name 
+										 FROM Campaign 
+										 WHERE Venue__c = :eventInstance.PatronTicket__Venue__c];
+			for(Integer i = 0; i < prototypes.size(); i++) {
+				SelectOption option = new SelectOption(prototypes[i].Id,prototypes[i].Name);
+				options.add(option);
+			}
+		}
 	}
 }
